--- a/src/app/ui/viewport/viewport.component.scss
+++ b/src/app/ui/viewport/viewport.component.scss
@@ -1,18 +1,17 @@
 .engine-wrapper {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 300px;
-  z-index: 0;
-
-  #renderCanvas {
-    width: 100%;
-    height: 100%;
-    touch-action: none;
-  }
-
-  #renderCanvas:focus {
-    outline: none;
-  }
+    position: relative;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 0;
+    #renderCanvas {
+        border: 1px solid #504b4b;
+        touch-action: none;
+        left: 235px;
+        position: relative;
+    }
+    #renderCanvas:focus {
+        outline: none;
+    }
 }
