--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,7 +67,7 @@ a:visited {
 }
 
 body {
-    background-color: #000;
+    background-color: #333335;
 }
 
 textarea:focus,
